--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CulinaryRecips)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CulinaryRecips Recipe.cpp Recipe.h functions.cpp functions.h main.cpp FileHandler3000.cpp FileHandler3000.h RecipeBook.cpp RecipeBook.h BakeryRecipe.cpp BakeryRecipe.h PremiumRecipe.cpp PremiumRecipe.h CakeRecipe.cpp CakeRecipe.h)
+add_executable(CulinaryRecips Recipe.cpp Recipe.h functions.cpp functions.h main.cpp FileHandler3000.cpp FileHandler3000.h RecipeBook.cpp RecipeBook.h BakeryRecipe.cpp BakeryRecipe.h)
